<resources>
    <string name="app_name">Tres Numeros</string>
    <string name="txtNum1">Número 1:</string>
    <string name="txtNum2">Número 2:</string>
    <string name="txtNum3">Número 3:</string>
    <string name="btnMenor">MENOR</string>
    <string name="btnMayor">MAYOR</string>
    <string name="btnAsc">ORD ASC</string>
    <string name="btnDesc">ORD DESC</string>
    <string name="btnBorrar">BORRAR TODO</string>
    <string name="txtNumEntero">Introduzca un número entero</string>
</resources>